Demo/Kubernetes/k8s-exam-solution/backend/be-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api-dep
spec:
  selector:
    matchLabels:
      app: backend-api-dep
  replicas: 1
  template:
    metadata:
      labels:
        app: backend-api-dep
    spec:
      containers:
      - name: backend-api-dep
        image: kaleabg/saf-ja-k8s-test-backend:1.0.0
        ports:
        - containerPort: 80
