Demo/Kubernetes/k8s-exam-solution/backend/be-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backendend-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: be.kal.gebeyalearning.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 80
